# eva

./: .gitignore  CMakeLists.txt  LICENSE  docker.yaml  readme.md
include/: audio_capture.hpp  transcriber.hpp  utils.hpp
src/: audio_capture.cpp  main.cpp  transcriber.cpp  utils.cpp
